--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -25,10 +25,10 @@ jobs:
         run: go test -v ./...
 
       - name: Build
-        run: go build -o valkys .
+        run: go build -o redis-cli-dashboard .
 
       - name: Test build
-        run: ./valkys -help
+        run: ./redis-cli-dashboard -help
 
   build:
     runs-on: ubuntu-latest
@@ -45,17 +45,17 @@ jobs:
 
       - name: Build for multiple platforms
         run: |
-          GOOS=linux GOARCH=amd64 go build -o valkys-linux-amd64 .
-          GOOS=darwin GOARCH=amd64 go build -o valkys-darwin-amd64 .
-          GOOS=darwin GOARCH=arm64 go build -o valkys-darwin-arm64 .
-          GOOS=windows GOARCH=amd64 go build -o valkys-windows-amd64.exe .
+          GOOS=linux GOARCH=amd64 go build -o redis-cli-dashboard-linux-amd64 .
+          GOOS=darwin GOARCH=amd64 go build -o redis-cli-dashboard-darwin-amd64 .
+          GOOS=darwin GOARCH=arm64 go build -o redis-cli-dashboard-darwin-arm64 .
+          GOOS=windows GOARCH=amd64 go build -o redis-cli-dashboard-windows-amd64.exe .
 
       - name: Upload artifacts
         uses: actions/upload-artifact@v3
         with:
-          name: valkys-binaries
+          name: redis-cli-dashboard-binaries
           path: |
-            valkys-linux-amd64
-            valkys-darwin-amd64
-            valkys-darwin-arm64
-            valkys-windows-amd64.exe
+            redis-cli-dashboard-linux-amd64
+            redis-cli-dashboard-darwin-amd64
+            redis-cli-dashboard-darwin-arm64
+            redis-cli-dashboard-windows-amd64.exe
