--- a/.goreleaser.yaml
+++ b/.goreleaser.yaml
@@ -52,7 +52,7 @@ changelog:
 release:
   github:
       owner: mohan-s-gopal
-      name: redis-cli-dashboard
+      name: redis-valkey-tui
   draft: false
   prerelease: false
   footer: >-
